<resources>
    <string name="app_name">Progressive Report</string>
    <string name="delete_all_reports">Delete all reports</string>
    <string name="add_report">Add Report</string>
    <string name="search">Search</string>
    <string name="designation">Nazwa</string>
    <string name="date">Data</string>
    <string name="time">Godzina</string>
    <string name="name">Nazwa</string>
    <string name="select_a_date">Wybierz datę</string>
    <string name="select_a_time">Wybierz godzinę</string>
    <string name="save_private_report">Save private report</string>
    <string name="save_cloud_report">Save cloud report</string>
    <string name="close_and_report_activity">Close and report activity</string>
</resources>
